Trying to organize the game modal and fix it from overflowing

--- a/styles/gameModal.module.css
+++ b/styles/gameModal.module.css
@@ -27,7 +27,7 @@
     display: flex;
     flex-direction: column;
     align-items: left;
-    /* height: 90%; */
+    height: 90%;
     width: 90%; 
     overflow-y: auto;
 }
@@ -43,7 +43,7 @@ background-color: #1a73e8;    /* color of the scroll thumb */
 }
 
 .logs {
-   /* height: 90%; */
+    height: 90%;
     overflow-y: auto;
 }
 
